<pre>
2008-XX-XX:
    * version 2.0 (probably)
    * IMPORTANT: 'verbose' is now used for message levels. Logging is
      controlled by the extensions.liberator.loglevel preference.
    * IMPORTANT: :viusage and :exusage now jump to the help index, use the
      special versions for the old behavior
    * IMPORTANT: renamed Startup and Quit autocmd events to VimperatorEnter and
      VimperatorLeave respectively
    * add :map <silent> to prevent a mapping from being echoed
    * add guioptions=nN to number tabs
    * add :loadplugins command
    * add . mapping
    * add N% normal mode command
    * add interpolation for items such as <url> to autocommands
    * add -nargs, -bang, and -count attribute support to :command
    * much improved completion support, including javascript, option, and search keyword
    * add <PageUp>/<S-Up> and <PageDown>/<S-Down> command-line mappings for
      selecting the previous and next history items
    * remove 'hintstyle', 'hlsearchstyle' and 'visualbellstyle' - use
      :highlight {Hint,Search,Bell}
    * add :highlight
    * add :optionusage
    * add :doautocmd and :doautoall
    * add :style and :delstyle commands, allow :so to source stylesheets
    * add DOMLoad autocmd event
    * add :messages and 'messages'
    * add :runtime
    * add 'runtimepath'
    * allow ; hints to work in the multiline output widget
    * add :scriptnames
    * add commandline completion to 'activate', 'cpt', 'defsearch', 'pageinfo',
      'newtab' and 'popups'
    * add 'helpfile' option
    * add 'wildignore' option
    * add :finish command
    * new events BookmarkAdd, ShellCmdPost, VimperatorLeavePre, DownloadPost
    * add 'cdpath' option
    * allow :dialog to open the cookies manager
    * add 'loadplugins' option
    * add count support to C-^ (Kazuo)
    * add 'eventignore' option
    * add :tabdetach command
    * new ;b extended hint mode (thanks Daniel Schaffrath)
    * :qa! and :q! quit forcefully, as in vim