@@ -493,7 +493,7 @@ function CommandLine() //{{{
             command.description,
             function (args)
             {
-                var str = echoArgumentToString(args, true);
+                var str = echoArgumentToString(args.string, true);
                 if (str != null)
                     command.action(str);
             },
