@@ -1,6 +1,10 @@
 <pre>
 2008-XX-XX:
     * version 2.0 (probably)
+    * IMPORTANT: command actions now take an args object, returned from
+      commands.parseArgs, as their first argument. This will break any commands
+      not using the args parser explicitly.  The old string value is now
+      available via args.string.
     * IMPORTANT: 'verbose' is now used for message levels. Logging is
       controlled by the extensions.liberator.loglevel preference.
     * IMPORTANT: :viusage and :exusage now jump to the help index, use the
